# swift

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/: CODEOWNERS
SwiftCompilerSources/: CMakeLists.txt  Package.swift.in
SwiftCompilerSources/Sources/: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/single-source/: StringInterpolation.swift
benchmark/utils/: main.swift
cmake/modules/: AddPureSwift.cmake  AddSwift.cmake  AddSwiftSwiftHostLibrary.cmake  CMakeLists.txt  SwiftGitRevision.cmake
docs/: Diagnostics.md
include/: module.modulemap
include/swift/: Subsystems.h  module.modulemap
lib/: CMakeLists.txt
lib/AST/: ASTBridging.cpp  ASTComparison.cpp  ASTContext.cpp  ASTDumper.cpp  ASTMangler.cpp  ASTPrinter.cpp  ASTScopeCreation.cpp  ASTScopeLookup.cpp  ASTScopeSourceRange.cpp  ASTVerifier.cpp  ASTWalker.cpp  AccessRequests.cpp  AvailabilityDomain.cpp  AvailabilitySpec.cpp  Builtins.cpp  CMakeLists.txt  Decl.cpp  DeclContext.cpp  DiagnosticEngine.cpp  (+14 more)
test/: lit.site.cfg.in
tools/: CMakeLists.txt
tools/swift-plugin-server/: CMakeLists.txt  Package.swift
tools/swift-plugin-server/Sources/CSwiftPluginServer/: PluginServer.cpp
tools/swift-plugin-server/Sources/SwiftInProcPluginServer/: InProcPluginServer.swift
tools/swift-plugin-server/Sources/SwiftLibraryPluginProvider/: LibraryPluginProvider.swift
tools/swift-plugin-server/Sources/swift-plugin-server/: swift-plugin-server.swift
utils/: build-presets.ini  build-script  build-script-impl  build.ps1  pretty-json  run-test  update-checkout  viewcfg
validation-test/: lit.site.cfg.in
(+566 files in other folders)
